Add environmental var for config_dir. Ref to base template hard coded

--- a/views/labeldesigner.jinja2
+++ b/views/labeldesigner.jinja2
@@ -1,4 +1,4 @@
-{% extends "base.jinja2" %}
+{% extends "/home/victe/brother_ql_web/views/base.jinja2" %}
 
 {% block page_title %}{{ title }}{% endblock %}
 
